; ModuleID = '/home/carl/AnghaBench/TDengine/src/util/src/extr_ttime.c_taosGetTimestamp.c'
source_filename = "/home/carl/AnghaBench/TDengine/src/util/src/extr_ttime.c_taosGetTimestamp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TSDB_TIME_PRECISION_MICRO = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @taosGetTimestamp(i64 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  %4 = load i64, i64* %3, align 8
  %5 = load i64, i64* @TSDB_TIME_PRECISION_MICRO, align 8
  %6 = icmp eq i64 %4, %5
  br i1 %6, label %7, label %9

7:                                                ; preds = %1
  %8 = call i32 (...) @taosGetTimestampUs()
  store i32 %8, i32* %2, align 4
  br label %11

9:                                                ; preds = %1
  %10 = call i32 (...) @taosGetTimestampMs()
  store i32 %10, i32* %2, align 4
  br label %11

11:                                               ; preds = %9, %7
  %12 = load i32, i32* %2, align 4
  ret i32 %12
}

declare dso_local i32 @taosGetTimestampUs(...) #1

declare dso_local i32 @taosGetTimestampMs(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
